--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
     {% if page.layout == "home" %}
       <script src="/assets/js/hero.js"></script>
     {% endif %}
+    {% if page.layout == "content" %}
+    <script src="/assets/js/sticky-section-nav.js"></script>
+     {% endif %}
   </body>
 
 </html>
