--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,6 @@
     {% if page.layout == "content" %}
     <script src="/assets/js/sticky-section-nav.js"></script>
      {% endif %}
+     <script src="{{ '/assets/js/close-nav-click-outside.js' | relative_url }}"></script>
   </body>
-
 </html>
