menu sitting above hero and showing content from nav yml

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -44,6 +44,7 @@
     padding: 0.5rem 1rem;
     border: 3px solid var(--color-grey-500);
     border-radius: 0.5rem;
+    z-index: 1001;
   }
 
   .nav-trigger:checked + label {
