--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -15,6 +15,13 @@
   justify-content: flex-end;
 }
 
+.site-nav .trigger .nav-icon-open {
+  width: 26px;
+  height: 26px;
+  margin: 0 auto 1rem;
+  display: block;
+}
+
 .page-link {
   font-size: 0.9rem;
 }
