hid the closed state icon on open and make snowflake close menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,6 @@
     <script src="/assets/js/sticky-section-nav.js"></script>
      {% endif %}
      <script src="{{ '/assets/js/close-nav-click-outside.js' | relative_url }}"></script>
+     <script src="/assets/js/close-nav-snowflake.js"></script>
   </body>
 </html>
