--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,8 @@
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
         <span class="menu-icon">
-          <svg viewBox="0 0 18 15" width="18px" height="15px">
-            <path fill="#424242"
-                  d="M1,1 L17,1 L17,3 L1,3 Z
-                     M1,7 L17,7 L17,9 L1,9 Z
-                     M1,13 L17,13 L17,15 L1,15 Z"/>
-          </svg>
-        </span>
+      <img src="/assets/images/Icons/mingcute--wave-line.svg" alt="Menu" width="26" height="26" />
+      </span>
       </label>
 
       <div class="trigger">
