--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -18,25 +18,12 @@
 .site-nav .trigger .nav-icon-open {
   width: 26px;
   height: 26px;
-  margin: 0 auto 1rem;
+  margin: 0 0 1rem auto;
   display: block;
 }
 
 .page-link {
   font-size: 0.9rem;
-}
-
-.site-nav .nav-trigger {
-  display: none;
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-  width: 0;
-  height: 0;
-}
-
-.site-nav label {
-  display: none;
 }
 
 @media screen and (max-width: var(--bp-nav)) {
@@ -45,7 +32,9 @@
     flex-direction: column;
     position: absolute;
     background: #fff;
+    left: auto;
     right: 0;
+    margin: 0;
     top: 100%;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 0.5rem 1rem;
@@ -54,27 +43,23 @@
     z-index: 1001;
   }
 
-  .nav-trigger:checked + label {
-    display: none;
-  }
-
-  .nav-trigger:checked + label + .trigger {
-    display: flex;
-  }
-
-  .site-nav label {
-    display: inline-block;
-  }
-
   .site-nav .trigger a {
     display: block;
     margin: 0.5rem 0;
   }
 }
 
-
 .sub-links {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.menu-icon {
+  display: block;
+}
+
+/* Hide the menu icon when the menu is open */
+.nav-trigger:checked + label .menu-icon {
+  display: none;
 }
