--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -40,17 +40,18 @@
 
 .trigger {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 2px;
+  right: 2px;
   width: auto;
   min-width: 200px;
   max-width: 90vw;
   height: auto;
   display: none;
   flex-direction: column;
-  background: #fff;
+  background: var(--color-background);
   padding: 1rem;
-  border-left: 3px solid var(--color-grey-500);
+  border: 1px solid variables.$color-primary;
+  border-radius: 10px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   z-index: 1001;
   pointer-events: auto;
