--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,11 +10,11 @@
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
         <span class="menu-icon">
-      <img src="/assets/images/Icons/mingcute--wave-line.svg" alt="Menu" width="26" height="26" />
+      <img src="/assets/images/icons/mingcute--wave-line.svg" alt="Close menu button" width="26" height="26" />
       </span>
       </label>
       <div class="trigger">
-        <img src="/assets/images/Icons/ph--snowflake-light.svg" alt="" class="nav-icon-open" />
+        <img src="/assets/images/icons/ph--snowflake-light.svg" alt="Open menu button" class="nav-icon-open" />
         {% assign nav_items = site.data.navigation | sort: "order" %}
         {% for item in nav_items %} 
           <div class="nav-group">
