--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -3,7 +3,9 @@
 /* ** MAIN NAVIGATION MENU ** */
 
 .site-nav {
-  position: relative;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
   border: none;
 }
 
@@ -25,42 +27,26 @@
 }
 
 @media screen and (max-width: var(--bp-nav)) {
-  .site-nav {
-    position: relative;
+  .site-nav .trigger {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background: #fff;
+    left: auto;
+    right: 0;
+    margin: 0;
+    top: 100%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 0.5rem 1rem;
+    border: 3px solid var(--color-grey-500);
+    border-radius: 0.5rem;
+    z-index: 1001;
   }
 
-  .site-nav label {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: fixed;
-    top: 2px;
-    right: 2px;
-    z-index: 1002;
+  .site-nav .trigger a {
+    display: block;
+    margin: 0.5rem 0;
   }
-}
-
-.trigger {
-  position: fixed;
-  top: 2px;
-  right: 2px;
-  width: auto;
-  min-width: 200px;
-  max-width: 90vw;
-  height: auto;
-  display: none;
-  flex-direction: column;
-  background: var(--color-background);
-  padding: 1rem;
-  border: 1px solid variables.$color-primary;
-  border-radius: 10px;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-  z-index: 1001;
-  pointer-events: auto;
-}
-
-.nav-trigger:checked ~ .trigger {
-  display: flex;
 }
 
 .sub-links {
