--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -29,10 +29,12 @@ $bp-sm: 480px;
 $bp-md: 768px;
 $bp-lg: 1024px;
 $bp-nav: 700px;
+$bp-nav-dsk: 701px;
 $bp-table: 600px;
 
-/* COLOURS TO BE USED */
+/* COLOURS AND BREAKPOINTS TO BE USED */
 :root {
+  /* COLOURS */
   --color-primary:    #204312;
   --color-secondary: #BDC7B9;
   --color-tertiary:  #607956;
@@ -47,13 +49,12 @@ $bp-table: 600px;
   --color-grey-border: #ddd;
   --color-grey-light:  #eee;
   --color-grey-separator: #aaa;
-}
 
-/* BREAKPOINTS */
-:root {
-  --bp-sm: 480px;
-  --bp-md: 768px;
-  --bp-lg: 1024px;
-  --bp-nav: 700px;
-  --bp-table: 600px;
+  /* BREAKPOINTS */
+  --bp-sm: #{$bp-sm};
+  --bp-md: #{$bp-md};
+  --bp-lg: #{$bp-lg};
+  --bp-nav: #{$bp-nav};
+  --bp-nav-dsk: #{$bp-nav-dsk};
+  --bp-table: #{$bp-table};
 }
