--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-<li class="p-name">Ash Bladon<strong> © </strong>2025<br><a href="/sharing-policy/">Sharing policy</a></li>
+<li class="p-name">Ash Bladon<strong> © </strong>2025<br><a href="/about/sharing-policy/">Sharing policy</a></li>
         </ul>
       </div>
 
