--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,6 +3,7 @@
 /******************************/
 $font-heading: 'Montserrat', 'Segoe UI', Roboto, sans-serif;
 $font-body: 'Poppins', 'Segoe UI', Roboto, sans-serif;
+$font-sustainamo: "alkaline", sans-serif;
 
 /******************************/
 /* COLOUR VARIABLES           */
