--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,7 +49,7 @@ strong, b {
 }
 
 .sustainamo-script {
-  font-family: "alkaline", sans-serif;
+  font-family: variables.$font-sustainamo;
   font-weight: normal;
   font-style: normal;
   font-size: 1.3rem;
