refactored nav js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,6 @@
     {% if page.layout == "content" %}
     <script src="/assets/js/sticky-section-nav.js"></script>
      {% endif %}
-     <script src="{{ '/assets/js/close-nav-click-outside.js' | relative_url }}"></script>
-     <script src="/assets/js/close-nav-snowflake.js"></script>
+     <script src="/assets/js/nav.js"></script>
   </body>
 </html>
